test/errors/scopes4.input.asm
* = $801

!let a = 0
!let a = 0

    lda #1
